--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Pixel Wizard</title>
   </head>
-  <body style="background-color: #F5F5F5">
+  <body style="background-color: #444">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
